test/neg/neg-serial2.errc
Type has serialization deleted via UPCXX_SERIALIZED_DELETE
